--- a/n/ne/new/newegg.com.html
+++ b/n/ne/new/newegg.com.html
@@ -1,5 +1,5 @@
-<!--The following is the downloaded HTML source of the newegg.com privacy policy that was archived on 2001-12-11.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20011211211943id_/http%3A//newegg.com/app/privacy.asp) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the newegg.com privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604024342id_/http%3A//newegg.com/app/privacy.asp) for the most accurate reproduction.-->
 
 <html><head>
 <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -30,12 +30,59 @@
       <table border="0" cellpadding="0" cellspacing="0" width="100%" vspace="0">
         <tbody> 
         <tr> 
-          <td align="left" valign="bottom" width="18%"><img src="../images/home_logo.gif" width="140" height="56"></td>
-          <td align="center" valign="bottom" width="34%"> 
-            <div align="center"><img src="../images2/1_nav_home.GIF" width="335" height="60" border="0" href="http://www.newegg.com/app/ViewProduct.asp?submit=special" align="absbottom" usemap="#Map2"></div>
+          <td align="left" valign="bottom" width="19%"><img src="../images/home_logo.gif" width="140" height="56"></td>
+          <td align="center" valign="bottom" width="81%"> 
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tbody><tr> 
+                <td> 
+                  <div align="right"><img src="../images/top_nav42.GIF" width="377" height="26" usemap="#Map3Map" border="0"> 
+                    <map name="Map3Map"> 
+                      <area shape="rect" coords="200,3,257,21" href="http://www.newegg.com/app/WishList.asp?position=current&amp;submit=view">
+                      <area shape="rect" coords="93,5,189,20" href="https://www.newegg.com/app/CustChange.asp">
+                      <area shape="rect" coords="22,3,81,19" href="http://www.newegg.com/app/shoppingcart.asp?submit=view">
+                      <area shape="rect" coords="282,4,360,19" href="https://www.newegg.com/app/orderstatus.asp">
+                    </map>
+                    <map name="Map3Map"> 
+                      <area shape="rect" coords="65,12,140,35" href="https://www.newegg.com/app/orderstatus.asp">
+                      <area shape="rect" coords="2,14,61,34" href="http://www.newegg.com/app/shoppingcart.asp?submit=view">
+                      <area shape="rect" coords="146,12,203,35" href="http://www.newegg.com/app/WishList.asp?position=current&amp;submit=view">
+                      <area shape="rect" coords="208,13,294,35" href="https://www.newegg.com/app/CustChange.asp">
+                    </map>
+                    <map name="Map3Map"> 
+                      <area shape="rect" coords="4,13,61,35" href="http://www.newegg.com/app/shoppingcart.asp?submit=view">
+                      <area shape="rect" coords="62,14,141,35" href="https://www.newegg.com/app/orderstatus.asp">
+                      <area shape="rect" coords="145,14,201,35" href="http://www.newegg.com/app/WishList.asp?position=current&amp;submit=view">
+                      <area shape="rect" coords="205,12,293,36" href="https://www.newegg.com/app/CustChange.asp">
+                    </map>
+                    <map name="Map3Map"> 
+                      <area shape="rect" coords="3,14,61,35" href="http://www.newegg.com/app/shoppingcart.asp?submit=view">
+                      <area shape="rect" coords="68,11,141,35" href="https://www.newegg.com/app/orderstatus.asp">
+                      <area shape="rect" coords="148,13,200,34" href="http://www.newegg.com/app/WishList.asp?position=current&amp;submit=view">
+                      <area shape="rect" coords="208,12,291,33" href="https://www.newegg.com/app/CustChange.asp">
+                    </map>
+                    <map name="Map3Map"> 
+                      <area shape="rect" coords="65,12,140,35" href="https://www.newegg.com/app/orderstatus.asp">
+                      <area shape="rect" coords="2,14,61,34" href="http://www.newegg.com/app/shoppingcart.asp?submit=view">
+                      <area shape="rect" coords="146,12,203,35" href="http://www.newegg.com/app/WishList.asp?position=current&amp;submit=view">
+                      <area shape="rect" coords="208,13,294,35" href="https://www.newegg.com/app/CustChange.asp">
+                    </map>
+                  </div>
+                </td>
+              </tr>
+              <tr> 
+                <td><img src="../images2/1_nav_home4.GIF" width="471" height="40" border="0" href="http://www.newegg.com/index.asp?DEPA=ALL" align="absbottom" usemap="#Map2"> 
+                  <map name="Map2"> 
+                    <area shape="rect" coords="3,12,53,35" href="http://www.newegg.com/index.asp">
+                    <area shape="rect" coords="58,11,120,34" href="http://www.newegg.com/index.asp?DEPA=1">
+                    <area shape="rect" coords="196,11,263,35" href="http://www.newegg.com/index.asp?DEPA=10">
+                    <area shape="rect" coords="269,12,331,36" href="http://www.newegg.com/index.asp?DEPA=2">
+                    <area shape="rect" coords="337,12,398,36" href="../app/catalog.asp?type=Refurbish">
+                    <area shape="rect" coords="128,12,192,35" href="http://www.newegg.com/app/catalog.asp?DEPA=8">
+                  </map>
+                </td>
+              </tr>
+            </tbody></table>
           </td>
-          <td align="right" valign="bottom" width="48%"><img src="../images/top_nav4.GIF" width="300" height="37" usemap="#Map3" border="0">
-<map name="Map3"><area shape="rect" coords="66,15,141,35" href="https://www.newegg.com/app/orderstatus.asp"><area shape="rect" coords="3,16,63,35" href="http://www.newegg.com/app/shoppingcart.asp?submit=view"><area shape="rect" coords="207,15,295,35" href="https://www.newegg.com/app/CustChange.asp"><area shape="rect" coords="144,15,203,35" href="http://www.newegg.com/app/WishList.asp?position=current&amp;submit=view"></map></td>
         </tr>
         </tbody> 
       </table>
@@ -45,21 +92,21 @@
     <td bgcolor="#003366"> 
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr> 
-          <td width="73%"> 
-            <div align="right"><img alt="" border="0" height="28" src="../images/subnav_home.GIF" width="521" usemap="#Map" align="absbottom"> 
-              <map name="Map"> 
-                <area shape="rect" coords="397,6,485,22" href="http://www.newegg.com/app/Customersvc.asp">
-                <area shape="rect" coords="306,6,377,21" href="http://www.newegg.com/app/contact.asp">
-                <area shape="rect" coords="136,6,280,21" href="http://www.newegg.com/app/warranty.asp">
-                <area shape="rect" coords="21,6,108,21" href="http://www.newegg.com/app/about.asp">
-              </map>
-            </div>
+          <td width="18%"> 
+            <div align="right"></div>
           </td>
           <form action="http://www.newegg.com/app/ViewProduct.asp" method="post" name="Search"></form>
-            <td align="right" width="27%"> <font size="2" face="Verdana, Arial, Helvetica, sans-serif" color="#FFFFFF"><b>Search:</b> 
-              <input aligh="middle" name="description" size="12" maxlength="20">
-              <input border="0" cache="" height="20" name="Go" src="../images/go-button-gateway.gif" type="image" value="Go" width="20">
-              &nbsp;&nbsp;</font> </td>
+            <td align="right" width="82%">
+              <div align="left"><img alt="" border="0" height="28" src="../images2/subnav_home4.GIF" usemap="#Map" align="absbottom"> 
+                <map name="Map"> 
+                  <area shape="rect" coords="476,4,563,23" href="http://www.newegg.com/app/Customersvc.asp">
+                  <area shape="rect" coords="384,3,453,22" href="http://www.newegg.com/app/contact.asp">
+                  <area shape="rect" coords="207,5,360,22" href="http://www.newegg.com/app/warranty.asp">
+                  <area shape="rect" coords="97,3,185,23" href="http://www.newegg.com/app/about.asp">
+                  <area shape="rect" coords="18,4,73,26" href="http://www.newegg.com/app/catalog.asp">
+                </map>
+              </div>
+            </td>
           
         </tr>
       </tbody></table>
@@ -69,12 +116,33 @@
     <td>
       <table width="100%" border="0" cellspacing="0" cellpadding="0">
         <tbody><tr> 
-          <td bgcolor="#ffcc66" width="88%"><img src="../images/dot3.gif" width="1" height="1"></td>
-          <td width="12%" bgcolor="#003366"> 
-            <table width="90" border="0" cellspacing="0" cellpadding="0">
-              <tbody><tr><td><img src="../images2/3_nav_right.gif" width="16" height="16"></td>
-                <td> <a href="http://www.newegg.com/app/contact.asp"><img src="../images2/3_nav_right_bar1.gif" width="74" height="16" border="0"></a></td>
-                </tr></tbody></table>
+          <td bgcolor="#ffcc66" width="70%">
+            <table width="100%" border="0" cellspacing="0" cellpadding="0">
+              <tbody><tr><form action="http://www.newegg.com/app/ViewProduct.asp" method="post" name="Search"></form>
+                  <td width="200"><font size="1" face="Verdana, Arial, Helvetica, sans-serif">Search:</font> 
+                    <input align="middle" name="description" style="font-family: courier" size="10" maxlength="20">
+                    <input border="0" cache="" height="19" name="Go" src="../images/go1.gif" type="image" value="Go" width="19" align="middle">
+                  </td>
+                
+                <td> 
+                  <div align="center">
+                    <font size="1" face="Verdana, Arial, Helvetica, sans-serif"><b><font color="#006600">Welcome 
+ Guest, 
+</font></b> 
+<a href="https://www.newegg.com/app/logon.asp">login</a> 
+
+</font> 
+                  </div>
+                </td>
+              </tr>
+            </tbody></table>
+       </td>
+          <td width="30%" bgcolor="#003366"> 
+            <table width="264" border="0" cellspacing="0" cellpadding="0">
+              <tbody><tr> 
+                <td colspan="2"><img src="../images2/3_nav_right_bar3.gif" width="264" height="25" usemap="#Map5" border="0"></td>
+              </tr>
+            </tbody></table>
           </td>
         </tr>
       </tbody></table>
@@ -82,12 +150,10 @@
   </tr>
   </tbody>
 </table>
-<map name="Map2"> 
-  <area shape="rect" coords="268,33,329,56" href="../app/catalog.asp?type=Refurbish">
-  <area shape="rect" coords="197,32,260,55" href="http://www.newegg.com/index.asp?DEPA=2">
-  <area shape="rect" coords="127,32,192,55" href="http://www.newegg.com/index.asp?DEPA=10">
-  <area shape="rect" coords="58,32,121,55" href="http://www.newegg.com/index.asp?DEPA=1">
-  <area shape="rect" coords="2,33,52,55" href="http://www.newegg.com/index.asp">
+<map name="Map5">
+  <area shape="rect" coords="23,4,101,26" href="https://www.newegg.com/app/Login.asp">
+  <area shape="rect" coords="117,1,179,26" href="https://www.newegg.com/app/LoginRMA.asp">
+  <area shape="rect" coords="199,2,262,24" href="http://www.newegg.com/app/contact.asp">
 </map>
 
 
@@ -365,7 +431,7 @@
   </table>
 <br>  
                 <hr>
-              <p align="center"><font size="2" face="Arial">Copyright 2001 NEWEGG.COM 
+              <p align="center"><font size="2" face="Arial">Copyright 2002 NEWEGG.COM 
                 Inc, All rights reserved. <a href="http://www.newegg.com/app/privacy.asp"> 
                 Privacy Policy</a></font></p>
 </div>
