--- a/m/mt/mts/mtsac.edu.html
+++ b/m/mt/mts/mtsac.edu.html
@@ -1,13 +1,15 @@
-<!--The following is the downloaded HTML source of the mtsac.edu privacy policy that was archived on 2001-06-08.
- Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20010608222956id_/http%3A//www.mtsac.edu/privacy.html) for the most accurate reproduction.-->
+<!--The following is the downloaded HTML source of the mtsac.edu privacy policy that was archived on 2002-06-04.
+ Please check the original snapshot on the Wayback Machine (https://web.archive.org/web/20020604024358id_/http%3A//www.mtsac.edu/privacy.html) for the most accurate reproduction.-->
 
-<!DOCTYPE html PUBLIC "-//SoftQuad Software//DTD HoTMetaL PRO 6.0::19990601::extensions to HTML 4.0//EN" "hmpro6.dtd"><html><head> 
+<html><head> 
 			 <title>Mt. San Antonio College Privacy Statement</title> 
 	  </head> 
-	  <body style="background-image: url(images/mtsac_header.jpg); background-repeat: no-repeat; background-attachment: scroll; background-position: 0pt 0pt; background-color: white" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0"> 
-			 <table width="600" cellpadding="3" cellspacing="0" border="0"> 
-					<tbody><tr> 
-						  <td height="90" align="RIGHT" valign="BOTTOM"><script language="JavaScript" title="Date Script">
+	  
+<body background="images/home_back.jpg" bgcolor="#FFFFFF" text="#000000" link="#000099" vlink="#CC00FF" alink="#990000" leftmargin="0" topmargin="0" marginwidth="0" marginheight="0">
+<table width="100%" border="0" cellspacing="0" cellpadding="0">
+  <tbody><tr>
+    <td background="images/privacy_header.jpg" height="75" align="left" valign="bottom">&nbsp;
+<script language="JavaScript" title="Date Script">
 
         var mydate=new Date()
 
@@ -33,130 +35,160 @@
 
                 document.write('<Font Size="1" Face="tahoma, sans-serif, helvetica" Color="#000000">'+dayarray[day]+' '+montharray[month]+' '+daym+', '+year+'</Font>')
 
-</script><font size="1" face="tahoma, sans-serif, helvetica" color="#000000">WEDNESDAY FEBRUARY 19, 2020</font></td> 
-					</tr> 
-					<tr> 
-						  <td height="30"> <font size="5">Privacy
-								 Statement</font></td> 
-					</tr> 
-					<tr> 
-						  <td height="30">&nbsp;</td> 
-					</tr> 
-					<tr> 
-						  <td> 
-								 <p>Mt. San Antonio College is committed to
-										safeguarding your privacy online. Please read the following privacy
-										statement to understand how Mt. SAC treats personal information. Please
-										check back periodically since this statement may change from time to
-										time.</p><hr size="0" noshade="NOSHADE"> 
-								 <p> <b>NOTICE:
-										<a href="http://www.ftc.gov/bcp/conline/pubs/online/sitesee/index.html">Click
-										here</a> for important information about safe surfing from the Federal
-										Trade Commission.</b> </p> <hr size="0" noshade="NOSHADE"> <br><b><a name="what">What personal information does the Mt. SAC site collect?
-								 </a></b> 
-								 <p>Mt. SAC does not collect personal information
-										for marketing or advertising purposes.<br><br>Some personal information
-										may be gathered when you fill out online forms, such as the Mt. SAC Online
-										College Application form or if reporting a problem with our site. This
-										information might include but may not be limited to your name, email
-										address, zip code, telephone number, birth date, gender, or ethnic
-										background. However, this information will not be distributed or shared
-										with any third party unless directed by court order.<br><br>If you submit
-										a form or send e-mail to Mt. SAC, we may keep a record of that
-										correspondence. Occasionally, Mt. SAC may ask visitors to participate
-										voluntarily in surveys that we use for research purposes. If personal
-										information is included in these surveys, a link to this Privacy Statement
-										will be included.</p> <hr size="0" noshade="NOSHADE"> <br><b><a name="cookies">What are cookies?</a></b> 
-								 <p><a href="http://www.zdwebopedia.com/cookie.htm" target="_top">Cookies</a> are
-										a small file located on the user's computer that provides the web server
-										with information about you to help customize the site for you. Cookies can
-										store and sometimes track information about you. A small amount of data is
-										sent to your browser from a web server and stored on your computer's hard
-										drive. When you return to a web site, the cookie informs the web server
-										who you are and what your preferences are and can then customize your
-										browsing experience for that specific web site.<br><br>At this time, Mt.
-										SAC does not make use of cookies on any of its web pages.<br><br>The Mt.
-										SAC web server does collect
-										<a href="http://www.zdwebopedia.com/term/i/ip_address.html">IP
-										addresses</a> for system administration purposes, to track system usage,
-										or for security purposes. These IP addresses are kept in a log file and
-										are a normal part of the web server. This information will not be
-										distributed or shared with any third party unless directed by court
-										order.</p><hr size="0"> <br><b><a name="share">Will Mt. SAC share my
-								 personal information?</a></b> 
-								 <p> As a general rule, no. Mt. SAC will not
-										disclose any personal information except when we have your permission or
-										under special circumstances, such as when we believe in good faith that
-										the law requires it. Mt. SAC does not sell or rent your information to
-										anyone. When we do collect personal information and if you do not wish
-										your personal information to be shared, you have the choice of not
-										participating in a particular service or feature where personal
-										information is collected.<br><br>Mt. SAC may disclose personal information
-										in special cases when we have reason to believe disclosing this
-										information is necessary to identify, contact or bring legal action
-										against someone who may be violating
-										<a href="/college/iet/web_resources/webteam/web_site_standards.html">Mt.
-										SAC's Standards and Practices</a> or may be causing injury to or
-										interference with Mt. SAC's rights or property, other Mt. SAC users, or
-										anyone else who could be harmed by such activities. Mt. SAC may disclose
-										or access personal information when we believe in good faith that the law
-										requires it and for administrative and other purposes that we deem
-										necessary to maintain, service, and improve our products and
-										services.<br><br>Mt. SAC also does not share, rent or sell your personal
-										financial or health-related information. If you use a Mt. SAC VM account,
-										<a href="/college/iet/web_resources/webteam/web_site_standards.html">Mt.
-										SAC's Standards and Practices</a> prohibit you from divulging your user ID
-										and password to anyone.0</p> <hr> <br><b>Additional Privacy
-								 Information</b> 
-								 <p> Questions regarding this Privacy Statement
-										should be directed to the
-										<a href="mailto:webmaster@mtsac.edu?Subject=Web_Site_Policy_Question">Webmaster</a>.</p>
-								 
-								 <ul> 
-										<li><a href="http://www.eff.org/" target="_top">Electronic Frontier Foundation</a> - a civil liberties
-											  organization working to protect your rights online. </li> 
-										<li><a href="http://epic.org/" target="_top">Electronic Privacy Information Center</a> - established to
-											  focus public attention on emerging civil liberties issues relating to the
-											  National Information Infrastructure. </li> 
-										<li><a href="http://www.cdt.org/privacy/" target="_top">Privacy Issues Page</a> - from the Center for Democracy and
-											  Technology (CDT). </li> 
-										<li><a href="http://www.epic.org/privacy/internet/cookies/" target="_top">The
-											  EPIC Cookies Page</a> - definitions, links, and news. </li> 
-										<li><a href="http://www.ftc.gov/privacy/index.html" target="_top">How to Protect
-											  Your Privacy</a> - information from the Federal Trade Commission. </li> 
-								 </ul></td> 
-					</tr> 
-					<tr> 
-						  <td>&nbsp;</td> 
-					</tr> 
-					<tr> 
-						  <td>&nbsp;</td> 
-					</tr> 
-					<tr> 
-						  <td align="RIGHT"> 
-								 <center><font size="1" face="arial, helvetica, helv, sans-serif">[
-										<a href="http://www.mtsac.edu">HOME</a> |
-										<a href="/college/student_learning">ACADEMIC DEPARTMENTS</a> |
-										<a href="/college/ltc/library">LIBRARY</a> |
-										<a href="/college/student_services">STUDENT SERVICES</a> |
-										<a href="/community">COMMUNITY</a> | <a href="/alumni">ALUMNI</a> |
-										<a href="/faculty">FACULTY / STAFF</a> ]</font><br><br><font color="#000000" size="1" face="arial, helv, tahoma">This site best viewed
-										in 800x600.<br>Send questions and comments about this site to the
-										<a href="mailto:webmaster@mtsac.edu?subject=web site feedback">Webmaster</a>.<br><a href="privacy.html">MT. SAC Privacy Statement</a> |
-										<a href="/college/iet/web_resources/webteam/web_site_standards.html">Terms
-										of Use</a> | <a href="webstats/index.html">Web
-										Statistics</a></font></center><br>
-								 <font color="#000000" size="1" face="helvetica, helv, arial"><script language="JavaScript" title="Page Update Notice Script"><!--
+</script><font size="1" face="tahoma, sans-serif, helvetica" color="#000000">WEDNESDAY FEBRUARY 19, 2020</font>
+    </td>
+  </tr>
+</tbody></table>
+<table width="600" cellpadding="0" cellspacing="0" border="0">
+  <tbody><tr> 
+    <td height="30" width="25">&nbsp;</td>
+    <td height="30" width="575"> <font size="5" face="Times New Roman, Times, serif">Privacy 
+      Statement<br>
+      Mt. San Antonio College</font></td>
+  </tr>
+  <tr>
+    <td width="25">&nbsp;</td>
+    <td width="575">&nbsp;</td>
+  </tr>
+  <tr> 
+    <td width="25">&nbsp;</td>
+    <td width="575"> 
+      Mt. San Antonio College is committed to safeguarding your privacy online. 
+        Please read the following privacy statement to understand how Mt. SAC 
+        treats personal information. Please check back periodically since this 
+        statement may change from time to time.
+      <hr size="0" noshade="NOSHADE">
+      <b>NOTICE: <a href="http://www.ftc.gov/bcp/conline/pubs/online/sitesee/index.html">Click 
+      here</a> for important information about safe surfing from the Federal Trade 
+      Commission.</b> 
+      <hr size="0" noshade="NOSHADE">
+      <b><a name="what">What personal information does the 
+      Mt. SAC site collect?</a></b> 
+      <p>Mt. SAC does not collect personal information for advertising purposes.</p>
+      <p>Some personal information may be gathered when you fill out and submit 
+        online forms. This information might include but may not be limited to 
+        your name, social security number, email address, zip code, telephone 
+        number, birth date, gender, or ethnic background. However, this information 
+        will not be distributed or shared with any third party unless directed 
+        by court order. If you submit a form or send e-mail to Mt. SAC, we may 
+        keep a record of that correspondence. Occasionally, Mt. SAC may ask web 
+        site visitors to participate voluntarily in surveys that we use for research 
+        purposes. If personal information is included in these surveys, a link 
+        to this Privacy Statement will be included.</p>
+      <hr size="0" noshade="NOSHADE">
+      <br>
+      <b><a name="cookies">What are cookies?</a></b> 
+      <p><a href="http://www.zdwebopedia.com/cookie.htm" target="_top">Cookies</a> 
+        are a small file located on the user's computer that provides the web 
+        server with information about you to help customize the site for you. 
+        Cookies can store and sometimes track information about you. A small amount 
+        of data is sent to your browser from a web server and stored on your computer's 
+        hard drive. When you return to a web site, the cookie informs the web 
+        server who you are and what your preferences are and can then customize 
+        your browsing experience for that specific web site.</p>
+      <p>The Mt. SAC web server does collect <a href="http://www.zdwebopedia.com/term/i/ip_address.html">IP 
+        addresses</a> for system administration purposes, to track system usage, 
+        or for security purposes. These IP addresses are kept in a log file and 
+        are a normal part of the web server. This information will not be distributed 
+        or shared with any third party unless directed by court order.</p>
+      <hr size="0">
+      <br>
+      <b><a name="share">Will Mt. SAC share my personal information?</a></b> 
+      <p> As a rule, Mt. SAC will not disclose personal information unless we 
+        have your permission or under special circumstances, such as when we believe 
+        in good faith that the law requires it. Mt. SAC does not sell or rent 
+        your information to anyone. When we do collect personal information and 
+        if you do not wish your personal information to be shared, you may have 
+        the choice of not participating in a particular service or feature where 
+        personal information is collected.</p>
+      <p>Mt. SAC may disclose personal information in special cases when we have 
+        reason to believe disclosing this information is necessary to identify, 
+        contact or bring legal action against someone who may be violating <a href="/college/iet/web_resources/webteam/web_site_standards.html">Mt. 
+        SAC's Standards and Practices</a> or may be causing injury to or interference 
+        with Mt. SAC's rights or property, other Mt. SAC users, or anyone else 
+        who could be harmed by such activities. Mt. SAC may disclose or access 
+        personal information when we believe in good faith that the law requires 
+        it and for administrative and other purposes that we deem necessary to 
+        maintain, service, and improve our products and services.</p>
+      <p>Mt. SAC also does not share, rent or sell your personal financial or 
+        health-related information. If you use a Mt. SAC email account, <a href="/college/iet/web_resources/webteam/web_site_standards.html">Mt. 
+        SAC's Standards and Practices</a> prohibit you from divulging your user 
+        ID and password to anyone.</p>
+      <hr size="0">
+      <p><b><a name="secure"></a>Is the Mt. SAC Web Site Secure?</b></p>
+      <p>The Mt. SAC web site administrators go to great lengths to ensure the 
+        web site is as secure as humanly possible. Along with software and hardware 
+        security features, the web site also uses Verisign's Secure Socket Layer 
+        128 bit encryption technology (the most secure and trusted encryption 
+        technology available) to ensure your personal information is as safe and 
+        secure from intrusion as possible.</p>
+      <hr>
+      <br>
+      <b>Additional Privacy Information</b> 
+      <p> Questions regarding this Privacy Statement should be directed to the 
+        <a href="mailto:webmaster@mtsac.edu?Subject=Web_Site_Policy_Question">Webmaster</a>.</p>
+      <ul>
+        <li><a href="http://www.eff.org/" target="_top">Electronic Frontier 
+          Foundation</a> - a civil liberties organization working to protect your 
+          rights online. </li>
+        <li><a href="http://epic.org/" target="_top">Electronic Privacy 
+          Information Center</a> - established to focus public attention on emerging 
+          civil liberties issues relating to the National Information Infrastructure. 
+        </li>
+        <li><a href="http://www.cdt.org/privacy/" target="_top">Privacy Issues Page</a> 
+          - from the Center for Democracy and Technology (CDT). </li>
+        <li><a href="http://www.epic.org/privacy/internet/cookies/" target="_top">The 
+          EPIC Cookies Page</a> - definitions, links, and news. </li>
+        <li><a href="http://www.ftc.gov/privacy/index.html" target="_top">How 
+          to Protect Your Privacy</a> - information from the Federal Trade Commission. 
+        </li>
+      </ul>
+    </td>
+  </tr>
+  <tr> 
+    <td width="25">&nbsp;</td>
+    <td width="575">&nbsp;</td>
+  </tr>
+  <tr> 
+    <td width="25">&nbsp;</td>
+    <td width="575">&nbsp;</td>
+  </tr>
+  <tr> 
+    <td align="RIGHT" width="25">&nbsp;</td>
+    <td align="RIGHT" width="575"> 
+      <center>
+        <font size="1" face="arial, helvetica, helv, sans-serif">[ 
+        <a href="http://www.mtsac.edu">HOME</a> | <a href="/college/student_learning">ACADEMIC 
+        DEPARTMENTS</a> | <a href="/college/ltc/library">LIBRARY</a> | <a href="/college/student_services">STUDENT 
+        SERVICES</a> | <a href="/community">COMMUNITY</a> | <a href="/alumni">ALUMNI</a> 
+        | <a href="/faculty">FACULTY / STAFF</a> ]</font><br>
+        <br>
+        <font color="#000000" size="1" face="arial, helv, tahoma">This 
+        site best viewed in 800x600.<br>
+        Send questions and comments about this site to the <a href="mailto:webmaster@mtsac.edu?subject=web site feedback">Webmaster</a>.<br>
+        <a href="privacy.html">MT. SAC Privacy Statement</a> 
+        | <a href="/college/iet/web_resources/webteam/web_site_standards.html">Terms 
+        of Use</a> | <a href="webstats/index.html">Web Statistics</a></font> 
+      </center>
+      <br>
+      <font color="#000000" size="1" face="helvetica, helv, arial"> 
+      <script language="JavaScript" title="Page Update Notice Script"><!--
     	document.write("This page last updated on &nbsp;"+ document.lastModified);
-		// --></script>This page last updated on &nbsp;02/19/2020 19:30:01 </font><br><font color="#000000" size="1" face="helvetica, helv, arial">Copyright © <script language="JavaScript" title="Copyright Notice Script">
+		// --></script>This page last updated on &nbsp;02/19/2020 23:05:06
+      </font><br>
+      <font color="#000000" size="1" face="helvetica, helv, arial">Copyright © 
+      <script language="JavaScript" title="Copyright Notice Script">
         var mydate=new Date()
         var year=mydate.getYear()
         if (year<2000)
                 year=1900+year
                 document.write('<Font Size="-2" Face="Arial" Color="#000000">'+year+'</Font>')
-</script><font size="-2" face="Arial" color="#000000">2020</font> Mt. San Antonio College. All Rights
-								 Reserved.</font><br><br></td> 
-					</tr> 
-			 </tbody></table> 
+</script><font size="-2" face="Arial" color="#000000">2020</font>
+      Mt. San Antonio College. All Rights Reserved.</font><br>
+      <br>
+    </td>
+  </tr>
+</tbody></table>
+
 
 </body></html>
